    without any dial feedback since dial feedback makes no sense when using 
    such radios.
    Added function to set_ptt().
    Implemented controller for RIG_TYPE_ROGGLE_MAN (FT-817/857/897 manual TX).

    * src/gtk-rig-ctrl.c:
    * src/gtk-rig-ctrl.h:
    Updated RIG_TYPE_TOGGLE_AUTO controller to perform TX frequency update only
    once every 10 seconds.


2010-07-09 Alexandru Csete <oz9aec at gmail.com>

    * src/radio-conf.h:
    * src/sat-pref-rig.c:
    * src/sat-pref-rig-editor.c:
    * src/gtk-rig-ctrl.c:
    Added option for manual T/R switch for FT-817/857/897 (RIG_TYPE_TOGGLE_MAN).
    The auto mode has been renamed to RIG_TYPE_TOGGLE_AUTO.
    
    * data/trsp/36122.trsp:
    Fixed incorrect V/U packet frequencies.

    * data/trsp/32791.trsp:
    Fixed incorrect frequency and added more modes.


2010-06-18 Alexandru Csete <oz9aec at gmail.com>

    * src/main.c:
    Applied patch 3009725: Delete Explicit Call to gtk_set_locale.
    
    * src/gtk-sat-data.[ch]:
    Added function to free satellite name, nickname and website (patch 3009727).
    
    * src/gtk-sat-module.c:
    Use new gtk_sat_data_free_sat() function (patch 3009727).
    

2010-05-23 Alexandru Csete <oz9aec at gmail.com>

    * src/print-pass.h:
    Applied patch 3005548: Cut and Paste Error In print_pass.h


2010-05-20 Alexandru Csete <oz9aec at gmail.com>

    * src/sgpsdp/sgp4sdp4.c:
    Applied patch 3002344: Remove Uninitialized Jump.

    * src/first-time.c:
    Applied patch 3002345: Free catfilename.

    * src/main.c:
    Applied patch 3002348: Option context never freed.


2010-05-04 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sky-at-glance.c:
    Click on satellite pass shows pass details.


2010-03-12 Stephane Fillod <fillods at users.sf.net>

    * src/gtk-event-list-popup.c:
    * src/gtk-sat-map-popup.c:
    * src/gtk-sat-list-popup.c:
    * src/gtk-single-sat.c:
    * src/gtk-polar-view-popup.c:
    * src/sat-info.[ch]: